# kanban-board-django

./: .dockerignore  .env.example  .env.staging  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  manage.py  prometheus.dev.yml  prometheus.yml  pyproject.toml  pytest.ini
api/: urls.py
api/auth/: urls.py
api/management/: urls.py
api/notification/: urls.py
api/notification_preferences/: urls.py
api/register/: urls.py
api/users/: urls.py
api/v1/: urls.py
core/: middleware.py  throttling.py
core/utils/: cache.py  jwt.py  request.py  view.py
docker/: entrypoint.dev.sh  entrypoint.prod.sh  nginx.conf
kanban_board/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
kanban_board/settings/: base.py  celery.py  dev.py  main.py  prod.py  production.py  test.py
management/: admin.py  apps.py  premissions.py
management/migrations/: 0002_alter_column_options_column_order.py  0003_task_parent.py  0005_alter_column_title_alter_task_title.py  0006_alter_task_priority_alter_task_status.py  0007_alter_board_options_alter_column_options_and_more.py  0008_alter_board_options.py  0009_column_idx_column_board_order_and_more.py
management/models/: __init__.py  base_model.py  board.py  column.py  project.py  relation_task.py  task.py
management/serializes/: board.py  column.py  project.py  task.py
management/services/: column.py  project.py  task.py
management/views/: board.py  column.py  project.py  task.py
notification/: admin.py  models.py  serializers.py  signals.py  views.py
notification/migrations/: 0001_initial.py  0002_notificationmodel_type_notificationmodel_url.py  0003_rename_description_notificationmodel_message_and_more.py  0004_alter_notificationmodel_options_and_more.py  0005_rename_notificationmodel_notification.py  0006_notificationsettings.py  0007_notification_idx_notification_created_brin_and_more.py
notification_preferences/: admin.py  apps.py  models.py  serializer.py  signals.py  views.py
notification_preferences/migrations/: 0001_initial.py  0002_alter_notificationpreferences_options.py
phone/: admin.py  apps.py  models.py  services.py  tasks.py
phone/migrations/: 0001_initial.py  0002_alter_phonecode_table.py  0003_phonecode_attempts.py  0004_alter_phonecode_options.py
tests/: conftest.py
users/: admin.py  models.py  services.py  signals.py  urls.py  urls_api.py  utils.py  validators.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0002_alter_user_table.py
users/serializers/: auth.py  register.py  user.py
users/templates/: auth.html  register.html
users/tests/: test_auth_jwt.py
users/views/: auth.py  authentication.py  register.py  registration.py  (+1 more)
(+43 files in other folders)
